# ts_xml

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  README  README.md  SConstruct  VERSION  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  towncrier.toml
.githooks/: pre-commit
.sconf_temp/: build.cfg  conftest_0
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
conda/: meta.yaml
doc/: .gitignore  Makefile  conf.py  csc_information.rst  documenteer.toml  generateCSVTable.py  generate_cet.py  generate_csc_information.py  index.rst  private-topics.rst  requirements.txt  sal_constraints_and_recommendations.rst  salcommand_attributes.rst  salevent_attributes.rst  salsubsystems_attributes.rst  saltelemetry_attributes.rst  subsystemData.csv  version-history.rst
rpm-dep/: README  clone-ts  dmrepos.rpm-dep  dogrep.sh  dogreppy.sh  find_csc_dependencies.py  grepcsc.sh  grepper.sh  make_dependency_graph.py  tsprivate.rpm-dep
sal_interfaces/: SALGenerics.xml  SALSubsystems.xml  scheduler_Telemetry.xml
schema/: SALCommandSet.xsd  SALCommandSet.xsl  SALEventSet.xsd  SALEventSet.xsl  SALSubsystemSet.xsd  SALSystemDictionary.xml  SALTelemetry.xsd  SALTelemetrySet.xsd  SALTelemetrySet.xsl
scripts/: SAL_Interface_TemplateMD.mdzip  UMLToSALXML-MD.py  UMLToSALXML.py
tests/: OLDtest_Alias.py  Unit_Validator.py  test_Alias.py  test_AttributeDescription.py  test_AttributeNaming.py  test_CSC_XML_Valid.py  test_Count.py  test_Generics.py  test_IDL_Type.py  test_NoDupcliateAttributes.py  (+18 more)
(+1220 files in other folders)
