[build-system]
requires = [ "setuptools", "setuptools_scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "ts_xml"
description = "Contains all the interface definition files for all the CSCs of the LSST."
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
dynamic = [ "version" ]
dependencies = [
  "astropy", "lxml"
]

[project.urls]
Homepage = "https://ts-xml.lsst.io"
Source = "https://github.com/lsst-ts/ts_xml"
documentation = "https://rubinobs.atlassian.net/secure/Dashboard.jspa"
repository = "https://github.com/lsst-ts/ts_xml"

[project.scripts]
get_component_info = "lsst.ts.xml.get_component_info:get_component_info"

[project.optional-dependencies]
dev = [
  "documenteer[pipelines,guide]==1.4",
]
test = [
  "astropy", "lxml"
]

[tools.setuptools]
package-data = { "" = "*.xml, *.xsd" }

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[tool.setuptools_scm]


[tool.pytest.ini_options]
asyncio_mode = "auto"
